Refactor backend to convert all DTOs to Java Records, enhancing code simplicity and performance. Update OrderController, OrderPresentationMapper, and GlobalExceptionHandler to utilize new Record methods. Clean up obsolete comments in EventPublisherFactory and ensure compliance with Java 17+ features. Document changes in MELHORIAS-REGRAS-JAVA.md and update executive summary to reflect improvements.